# visal-trivia

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260531_0001_initial_trivia_tables.py  20260531_0002_quiz_settings.py  20260531_0003_user_logins.py  20260531_0004_prize_codes.py  20260604_0004_quiz_rules.py  20260604_0005_prize_code.py  20260604_0006_ensure_prize_codes.py  20260605_0001_score_soft_delete.py
backend/app/: main.py  seed.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  category.py  player.py  prize_code.py  question.py  quiz_session.py  quiz_setting.py  score.py  user_login.py
backend/app/schemas/: admin.py  auth.py  category.py  prize_code.py  question.py  quiz.py  score.py  setting.py
backend/app/services/: quiz_service.py
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Button.jsx  Card.jsx  EmptyState.jsx  LoadingState.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useGoogleSignIn.js  useTimer.js
frontend/src/layouts/: AppShell.jsx
frontend/src/pages/: AdminPage.jsx  HomePage.jsx  LandingPage.jsx  LeaderboardPage.jsx  LoginPage.jsx  QuizPage.jsx
frontend/src/utils/: format.js
