[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visal-trivia-backend"
version = "0.1.0"
description = "FastAPI backend for Visal Trivia"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "google-auth>=2.35.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
